avances pantalla usuarios

--- a/src/assets/sass/_variables.scss
+++ b/src/assets/sass/_variables.scss
@@ -94,11 +94,11 @@ $main-color: main-palette(500);
 $main-bg: #fff;
 $boxed-width: 1140px;
 
-$success-color: #b7ce63;
+$success-color: #04b46b;
 $success-contrast: #000;
-$info-color: #64b5f6;
+$info-color: #3c82c4;
 $info-contrast: #000;
-$warning-color: #e9e165;
+$warning-color: #fa996c;
 $warning-contrast: #000;
 $error-color: #ed5564;
 $error-contrast: #fff;
