--- a/src/assets/sass/components/_input.scss
+++ b/src/assets/sass/components/_input.scss
@@ -7,8 +7,8 @@ $_bg: (
   disabled: rgba(#ccc, 0.1)
 );
 $_border: (
-  default: #ebebeb,
-  hover: #ebebeb,
+  default: #b4afaf,
+  hover: #888383,
   focus: accent-palette(500),
   disabled: rgba(#ccc, 0.5)
 );
@@ -269,6 +269,7 @@ html {
 
   .ant-form-item-label {
     font-weight: 600;
+    margin-right: 8px;
   }
 
   .ant-input-affix-wrapper .ant-input:not(:first-child) {
