--- a/src/assets/sass/_variables.scss
+++ b/src/assets/sass/_variables.scss
@@ -112,7 +112,7 @@ $main-lh: ($module * 2 / $main-fs);
 $module-rem: ($module / $main-fs) * 1rem;
 $shape: 6px;
 $shadow: 0 18px 24px rgba(#000, 0.12);
-$shadow-hover: 0px 8px 24px rgba(#000, 0.12);
+$shadow-hover: 0px 8px 24px 15px rgba(#000, 0.12);
 $animation: ease-in-out;
 
 //Second
